上线前备份

--- a/templates/marketindex.html
+++ b/templates/marketindex.html
@@ -4,7 +4,7 @@
 <html class="pixel-ratio-1"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-<title>链克熊</title>
+<title>玩客狗</title>
 <script src="/static/js/jquery.min.js"></script>
     <link href="/static/css/jquery-weui.min.css" rel="stylesheet">
 <script src="/static/js/jquery-weui.min.js"></script>
